# web-agent

./: .env.example  .gitignore  LICENSE  README.md  plan.md  pyproject.toml
agent/: __init__.py  actions.py  browser.py  env.py  llm.py  loop.py  marks.py  memory.py  observation.py  prompts.py  types.py  workflow_memory.py
eval/: __init__.py  failure_taxonomy.py  harness.py  local_demo.py  metrics.py  stats.py
eval/baselines/: __init__.py  browser_use_runner.py
eval/local_site/: contact.html  index.html  products.html
eval/mind2web/: __init__.py  tasks.py  webjudge.py
eval/tasks/: mind2web_matched.json  mind2web_slice.json
eval/webarena/: __init__.py  auth.py  config.py  sample_tasks.json  scorer.py  shopping_matched.json  shopping_scale.json  tasks.py  verified.py
scripts/: __init__.py  check_webarena.py  cross_evaluator.py  induce_workflows.py  make_charts.py  make_demo_gif.py  measure_action_format.py  measure_pruning.py  rescore_webarena.py  run_sweep.py  smoke_test.py  webarena_smoke.py
tests/: test_actions.py  test_grounding.py  test_harness_internals.py  test_loop_policy.py  test_marks.py  test_metrics_taxonomy.py  test_observation.py  test_planning.py  test_scoring.py  test_scratchpad.py  test_stats.py  test_verified_scorer.py  test_webarena_integration.py  test_workflow_memory.py
